--- a/src/mono/.travis.yml
+++ b/src/mono/.travis.yml
@@ -16,4 +16,6 @@ before_install:
   - sudo apt-get install -qq mono-complete
 script:
   - ./autogen.sh
-  - make distcheck
+  - make
+  - make check
+  - make dist
