Since `make distcheck` has been fixed, use it in .travis.yml again.
Commit migrated from https://github.com/mono/mono/commit/80b154781e9b24db23269f8d177acbbb59aa20ad

--- a/src/mono/.travis.yml
+++ b/src/mono/.travis.yml
@@ -16,6 +16,4 @@ before_install:
   - sudo apt-get install -qq mono-complete
 script:
   - ./autogen.sh
-  - make
-  - make check
-  - make dist
+  - make distcheck
