[genproj] Steps towards making pre-build scripts cross platform;   Lots more build now
Commit migrated from https://github.com/mono/mono/commit/29a2d0db57d105caf2da97811e6d832baa6099a1

--- a/src/mono/msvc/scripts/Makefile
+++ b/src/mono/msvc/scripts/Makefile
@@ -1,5 +1,8 @@
-all: genproj.exe
+all: genproj.exe prepare.exe
 	mono genproj.exe
 
 genproj.exe: genproj.cs
-	mcs genproj.cs -pkg:dotnet -r:System.Xml.Linq
+	mcs genproj.cs -r:System.Xml.Linq
+
+prepare.exe: prepare.cs
+	mcs prepare.cs
