Revert "Merge branch 'master' of https://github.com/mono/mono"
This reverts commit mono/mono@9dd632fb9e7197d278bd99152c1c67c6ab51a207, reversing
changes made to mono/mono@164f9cbec4f79cc013c7b1cf674e70e4573f4b36.


Commit migrated from https://github.com/mono/mono/commit/8f09dad4353bb75afebf96ad58d08f7e7f3bf56d

--- a/src/mono/eglib/configure.ac
+++ b/src/mono/eglib/configure.ac
@@ -88,7 +88,7 @@ case $host in
 esac
 
 case $target in
-arm*-darwin*|aarch64*-*)
+arm*-darwin*)
     CFLAGS="$CFLAGS -U_FORTIFY_SOURCE"
     ;;
 i*86-*-darwin*)
