[sgen-bridge] Move the bridge implementation behind a pointer table.
This change is in preparation to introduce two implementations of the bridge.

The current implementation is now know as old.


Commit migrated from https://github.com/mono/mono/commit/83341e8416177642f876f75bd2b5d659b39b6752

--- a/src/mono/mono/metadata/Makefile.am.in
+++ b/src/mono/mono/metadata/Makefile.am.in
@@ -219,6 +219,7 @@ sgen_sources = \
 	sgen-protocol.c \
 	sgen-bridge.c		\
 	sgen-bridge.h		\
+	sgen-old-bridge.c		\
 	sgen-toggleref.c		\
 	sgen-toggleref.h		\
 	sgen-gc.h		\
