[sgen-bridge] Add the new bridge to the testing matrix.
Commit migrated from https://github.com/mono/mono/commit/ff938b5960ed922aca31fb88f078c3375183ff96

--- a/src/mono/mono/tests/Makefile.am
+++ b/src/mono/mono/tests/Makefile.am
@@ -920,7 +920,10 @@ SGEN_CONFIGURATIONS =	\
 SGEN_BRIDGE_CONFIGURATIONS =	\
 	"|plain"	\
 	",major=marksweep-conc|ms-conc"	\
-	",minor=split|ms-split"
+	",minor=split|ms-split"	\
+	",bridge-implementation=new|plain-new-bridge"	\
+	",bridge-implementation=new,major=marksweep-conc|ms-conc-new-bridge"	\
+	",bridge-implementation=new,minor=split|ms-split-new-bridge"
 
 sgen-regular-tests: $(SGEN_TESTS)
 	@failed=0; \
