[llvm] Update to the llvm backend to work with llvm mono/mono@a82b09c3a3efbfaf2ce39adc113f9a5458cde398.
Commit migrated from https://github.com/mono/mono/commit/628aa55e74dc88d623136861dbff6a5f3af0034d

--- a/src/mono/configure.in
+++ b/src/mono/configure.in
@@ -2468,8 +2468,10 @@ if test "x$enable_llvm" = "xyes"; then
 	  	 fi
 	  fi
 	  if test "x$llvm_api_version" = "x"; then
+		LLVM_CFLAGS="$LLVM_CFLAGS -DLLVM_API_VERSION=0"
 		LLVM_CXXFLAGS="$LLVM_CXXFLAGS -DLLVM_API_VERSION=0"
 	  else
+		LLVM_CFLAGS="$LLVM_CFLAGS -DLLVM_API_VERSION=$llvm_api_version"
 		LLVM_CXXFLAGS="$LLVM_CXXFLAGS -DLLVM_API_VERSION=$llvm_api_version"
 	  fi
    else
