[reflection] Do proper error handling in more cases.
Remove all internal usages of mono_custom_attrs_construct and replace with mono_custom_attrs_construct_by_type
that takes a MonoError.

Introduce mono_custom_attrs_get_attr_checked and replace usage of the old one where it's needed.


Commit migrated from https://github.com/mono/mono/commit/5e905069c434ee21928951a345eeeff52b228158

--- a/src/mono/mono/metadata/Makefile.am.in
+++ b/src/mono/mono/metadata/Makefile.am.in
@@ -190,7 +190,8 @@ common_sources = \
 	threadpool-internals.h	\
 	verify.c		\
 	verify-internals.h	\
-	wrapper-types.h
+	wrapper-types.h	\
+	reflection-internals.h
 
 # These source files have compile time dependencies on GC code
 gc_dependent_sources = \
