Rename configure.in -> configure.ac. Based on PR mono/mono#976.
Commit migrated from https://github.com/mono/mono/commit/09126b1b214562228e98c8b0cb6eb98a37818467

--- a/src/mono/configure.ac
+++ b/src/mono/configure.ac
@@ -344,7 +344,7 @@ case "$host" in
 		use_sigposix=yes
 		;;
 	*)
-		AC_MSG_WARN([*** Please add $host to configure.in checks!])
+		AC_MSG_WARN([*** Please add $host to configure.ac checks!])
 		host_win32=no
 		libdl="-ldl"
 		;;
@@ -1142,7 +1142,7 @@ if test x$target_win32 = xno; then
 	else
 		LIBS="$LIBS $DL_LIB"
 		AC_DEFINE(HAVE_DL_LOADER,1,[dlopen-based dynamic loader available])
-		dnl from glib's configure.in
+		dnl from glib's configure.ac
 		AC_CACHE_CHECK([for preceeding underscore in symbols],
 			mono_cv_uscore,[
 			AC_TRY_RUN([#include <dlfcn.h>
