Compile libgc with -Wno-deprecated-declarations as it uses some obsolete POSIX APIs.
Commit migrated from https://github.com/mono/mono/commit/69ed93a8fac6c21f5addb44a55d23082a16b9acd

--- a/src/mono/configure.ac
+++ b/src/mono/configure.ac
@@ -59,6 +59,9 @@ CFLAGS_FOR_LIBGC=$CFLAGS
 CPPFLAGS_FOR_EGLIB=$CPPFLAGS
 CFLAGS_FOR_EGLIB=$CFLAGS
 
+# libgc uses some deprecated APIs
+CFLAGS_FOR_LIBGC="$CFLAGS -Wno-deprecated-declarations"
+
 #
 # These are the flags that need to be stored in the mono.pc file for 
 # compiling code that will embed Mono
