[runtime] Rewrite MemoryMappedFile to support named mappings.
Commit migrated from https://github.com/mono/mono/commit/59fd337839b6eb3ad740493278078c04687d89f9

--- a/src/mono/mono/metadata/Makefile.am.in
+++ b/src/mono/mono/metadata/Makefile.am.in
@@ -193,7 +193,11 @@ common_sources = \
 	verify.c		\
 	verify-internals.h	\
 	wrapper-types.h	\
-	reflection-internals.h
+	reflection-internals.h	\
+	file-mmap-posix.c	\
+	file-mmap-windows.c	\
+	file-mmap.h
+
 
 # These source files have compile time dependencies on GC code
 gc_dependent_sources = \
