[sgen-gray-queue] Add graystack stress test
Commit migrated from https://github.com/mono/mono/commit/79a9694861739959c644746b71d25aa5a21b982a

--- a/src/mono/mono/tests/Makefile.am
+++ b/src/mono/mono/tests/Makefile.am
@@ -43,6 +43,7 @@ STRESS_TESTS_SRC=	\
 	monitor-stress.cs	\
 	thread-stress.cs	\
 	gc-stress.cs		\
+	gc-graystack-stress.cs		\
 	exit-stress.cs		\
 	process-stress.cs	\
 	assembly-load-stress.cs
@@ -927,6 +928,7 @@ SGEN_TESTS =	\
 	sgen-cementing-stress.exe	\
 	sgen-case-23400.exe	\
 	sgen-new-threads-dont-join-stw.exe	\
+	gc-graystack-stress.exe	\
 	bug-17590.exe
 
 SGEN_CONFIGURATIONS =	\
