--- a/src/mono/mono/tests/Makefile.am
+++ b/src/mono/mono/tests/Makefile.am
@@ -563,7 +563,8 @@ DISABLED_TESTS_WRENCH=	\
 	assemblyresolve_event3.exe \
 	delegate2.exe	\
 	finally_guard.exe \
-	gc-altstack.exe
+	gc-altstack.exe \
+	generic-xdomain.2.exe
 
 AOT_DISABLED_TESTS=constraints-load.exe
 
