--- a/src/mono/msvc/libmonoruntime.vcxproj
+++ b/src/mono/msvc/libmonoruntime.vcxproj
@@ -51,6 +51,7 @@
     <ClCompile Include="..\mono\metadata\environment.c" />
     <ClCompile Include="..\mono\metadata\exception.c" />
     <ClCompile Include="..\mono\metadata\file-io.c" />
+    <ClCompile Include="..\mono\metadata\file-mmap-windows.c" />
     <ClCompile Include="..\mono\metadata\filewatcher.c" />
     <ClCompile Include="..\mono\metadata\gc-memfuncs.c" />
     <ClCompile Include="..\mono\metadata\gc.c" />
