[runtime] First pass of cross compilation cleanup. Allow offsets and alignment to be externally calculated.
Commit migrated from https://github.com/mono/mono/commit/d97ad1baef1fc0fa7f43a10ab01d8a14a2911d2a

--- a/src/mono/mono/metadata/Makefile.am.in
+++ b/src/mono/mono/metadata/Makefile.am.in
@@ -196,7 +196,9 @@ common_sources = \
 	reflection-internals.h	\
 	file-mmap-posix.c	\
 	file-mmap-windows.c	\
-	file-mmap.h
+	file-mmap.h	\
+	object-offsets.h	\
+	abi-details.h
 
 
 # These source files have compile time dependencies on GC code
