[runtime] Add cross helper extensions.
Commit migrated from https://github.com/mono/mono/commit/c0bb6c817c62d843e586796ddf8da760c8fa3065

--- a/src/mono/mono/metadata/Makefile.am.in
+++ b/src/mono/mono/metadata/Makefile.am.in
@@ -198,7 +198,8 @@ common_sources = \
 	file-mmap-windows.c	\
 	file-mmap.h	\
 	object-offsets.h	\
-	abi-details.h
+	abi-details.h	\
+	metadata-cross-helpers.c
 
 
 # These source files have compile time dependencies on GC code
