[runtime] Enable aot on 64 bit osx.
Commit migrated from https://github.com/mono/mono/commit/0d166ba085a11e11dee202557812ec02f350d81d

--- a/src/mono/configure.ac
+++ b/src/mono/configure.ac
@@ -2585,6 +2585,10 @@ case "$host" in
 			sgen_supported=true
 			AOT_SUPPORTED="yes"
 			;;
+		  darwin*)
+			sgen_supported=true
+			AOT_SUPPORTED="yes"
+			;;
 		  darwin*|openbsd*|freebsd*)
 			sgen_supported=true
 			;;
