[runtime] Remove another duplicate switch case from configure.
Commit migrated from https://github.com/mono/mono/commit/fd0aaf0c5982bd7053bd51a633c48717c03f4cc7

--- a/src/mono/configure.ac
+++ b/src/mono/configure.ac
@@ -2567,7 +2567,7 @@ case "$host" in
 			sgen_supported=true
 			AOT_SUPPORTED="yes"
 			;;
-		  darwin*|openbsd*|freebsd*)
+		  openbsd*|freebsd*)
 			sgen_supported=true
 		        ;;
 		esac
