--- a/src/mono/msvc/libmonoruntime.vcxproj
+++ b/src/mono/msvc/libmonoruntime.vcxproj
@@ -125,6 +125,7 @@
     <ClCompile Include="..\mono\metadata\threadpool.c" />
     <ClCompile Include="..\mono\metadata\threads.c" />
     <ClCompile Include="..\mono\metadata\verify.c" />
+    <ClCompile Include="..\mono\mini\mini-cross-helpers.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\mono\metadata\appdomain.h" />
