[runtime] Use pthread tls on mingw32, recent versions support __thread, but its emulated.
Commit migrated from https://github.com/mono/mono/commit/80cca0a42370e868f4a67697f5f1778ec42b2584

--- a/src/mono/configure.ac
+++ b/src/mono/configure.ac
@@ -129,6 +129,7 @@ case "$host" in
 		libgc_threads=win32
 		gc_default=included
 		with_sigaltstack=no
+		with_tls=pthread
 		LN_S=cp
 		# This forces libgc to use the DllMain based thread registration code on win32
 		libgc_configure_args="$libgc_configure_args --enable-win32-dllmain=yes"
