[runtime] Avoid building libgc if its disabled.
Commit migrated from https://github.com/mono/mono/commit/d995399b40ad5beb3c54c39627531c7a00200920

--- a/src/mono/configure.ac
+++ b/src/mono/configure.ac
@@ -1055,7 +1055,9 @@ case "x$gc" in
 
 	xincluded)
 		use_included_gc=yes
-		libgc_dir=libgc
+		if test "x$support_boehm" = "xyes"; then
+			libgc_dir=libgc
+		fi
 
 		LIBGC_CPPFLAGS='-I$(top_srcdir)/libgc/include'
 		LIBGC_LIBS='$(top_builddir)/libgc/libmonogc.la'
@@ -3209,7 +3211,9 @@ case "x$gc" in
 		# (infinite recursion, undefined parking behavior, etc)
 		TMP_CPPFLAGS=`echo $TMP_CPPFLAGS | sed -e 's/-finstrument-for-thread-suspension//g'`
 		ac_configure_args="$ac_configure_args --disable-embed-check --with-libgc-threads=$libgc_threads $libgc_configure_args \"CPPFLAGS_FOR_LIBGC=$TMP_CPPFLAGS\" \"CFLAGS_FOR_LIBGC=$CFLAGS_FOR_LIBGC\""
-		AC_CONFIG_SUBDIRS(libgc)
+		if test "x$support_boehm" = "xyes"; then
+			AC_CONFIG_SUBDIRS(libgc)
+		fi
 		;;
 esac
 
