Enable sgen on mingw64.
Commit migrated from https://github.com/mono/mono/commit/d795d17c3d853f3d70dea416588a5e338c4c128e

--- a/src/mono/configure.ac
+++ b/src/mono/configure.ac
@@ -2583,6 +2583,9 @@ case "$host" in
 		  openbsd*|freebsd*)
 			sgen_supported=true
 			;;
+		  mingw*)
+			sgen_supported=true
+			;;
 		esac
 		case "$host" in
 			x86_64-*-nacl*)
